--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -24,17 +24,13 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Install Nodejs
-      run: actions/setup-node@v2-beta
+      uses: actions/setup-node@v2-beta
       with:
-    node-version: 12
+       node-version: 12
     - name: Install Surge
       run: npm install -g surge
     - name: Run surge
       run: surge ./ assignment_1.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
   
 
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+  
